--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,38 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+        </ul>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user</li>
+          <li>The body elements also contains a number of different sections</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>The CSS is a stylesheet language used to describe presented document language in HTML</li>
+        </ul>
+      </section> 
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>gitHub is a code hosting platform for version control and collaboration</li>
+          <li>gitHub is confusing but its important to understand the essentials like repositories, branches,commits, and pull requests</li>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+        </section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>JavaScript is the programming language of the Web.</li>
+          <li>It allows users to interact with a website</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
